src/objects/CollectionTool__c.object
<CustomObject>
    <fields>
        <fullName>Patient_Drop_Out_Rate__c</fullName>
        <label>Patient Drop Out Rate %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Platform_Technology__c</fullName>
        <label>Platform Technology</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Protocol_Available_Date__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Protocol Available Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Protocol_Decision_Grid_as_attachment__c</fullName>
        <label>Protocol/Decision Grid as attachment?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protocol_Dictate_Caregiver_Payment__c</fullName>
        <label>Protocol Dictate Caregiver Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                </value>
                <value>
                    <fullName>ROW exc Japan</fullName>
                </value>
                <value>
                    <fullName>ROW Inc Japan</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Report_additions_changes__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Report additions/changes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rev_Lab_ID__c</fullName>
        <description>IQVIAPSA-9594</description>
        <label>Rev Lab ID</label>
        <length>20</length>
        <type>Text</type>
        </fields>
    <fields>
        <fullName>Reporting_to_which_Authorities__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Reporting to which Authorities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FDA</fullName>
                </value>
                <value>
                    <fullName>EMA</fullName>
                </value>
                <value>
                    <fullName>PMDA</fullName>
                </value>
                <value>
                    <fullName>MHRA</fullName>
                </value>
                <value>
                    <fullName>Health Canada</fullName>
                </value>
                <value>
                    <fullName>SwissMedic</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                    <label>Korea (South)</label>
                </value>
                <value>
                    <fullName>CN</fullName>
                    <label>China</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>American Samoa</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scenario_Number__c</fullName>
        <description>IQVIAPSA-7585 Scenario Number</description>
        <label>Scenario Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screened_Patients__c</fullName>
        <description>IQVIAPSA-7242</description>
        <label>Screened Patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Screened_Pts_Receive_Payment__c</fullName>
        <label>Screened Pts Receive Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Device_Type__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Select Device Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Tablet</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Tablet and/or Phone</fullName>
                </value>
                <value>
                    <fullName>No Device</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceLine__c</fullName>
        <description>IQVIAPSA-8230 Service Line</description>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Line</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Collection Tools (ServiceLine)</relationshipLabel>
        <relationshipName>Collection_Tools1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Days__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Service Days</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mon - Fri</fullName>
                </value>
                <value>
                    <fullName>Mon - Sun</fullName>
                </value>
                <value>
                    <fullName>Sat - Sun</fullName>
                </value>
                <value>
                    <fullName>Mon - Sat</fullName>
                </value>
                <value>
                    <fullName>Sun - Thurs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Hours_End__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Service Hours End</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
                <value>
                    <fullName>24:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Hours_Start__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Service Hours Start</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Language__c</fullName>
        <description>IQVIAPSA-6784</description>
        <label>Service Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English*</fullName>
                </value>
                <value>
                    <fullName>French*</fullName>
                </value>
                <value>
                    <fullName>German*</fullName>
                </value>
                <value>
                    <fullName>Spanish*</fullName>
                </value>
                <value>
                    <fullName>Italian*</fullName>
                </value>
                <value>
                    <fullName>Dutch*</fullName>
                </value>
                <value>
                    <fullName>Portuguese*</fullName>
                </value>
                <value>
                    <fullName>Romanian*</fullName>
                </value>
                <value>
                    <fullName>Filipino*</fullName>
                </value>
                <value>
                    <fullName>Chinese**</fullName>
                </value>
                <value>
                    <fullName>Mandarin Chinese**</fullName>
                </value>
                <value>
                    <fullName>Japanese**</fullName>
                </value>
                <value>
                    <fullName>Korean**</fullName>
                </value>
                <value>
                    <fullName>Malay**</fullName>
                </value>
                <value>
                    <fullName>Tamil**</fullName>
                </value>
                <value>
                    <fullName>Thai**</fullName>
                </value>
                <value>
                    <fullName>Vietnamese**</fullName>
                </value>
                <value>
                    <fullName>Afar</fullName>
                </value>
                <value>
                    <fullName>Afrikaans</fullName>
                </value>
                <value>
                    <fullName>Albanian</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Armenian</fullName>
                </value>
                <value>
                    <fullName>Azerbaijani</fullName>
                </value>
                <value>
                    <fullName>Belarusian</fullName>
                </value>
                <value>
                    <fullName>Bengali</fullName>
                </value>
                <value>
                    <fullName>Bislama</fullName>
                </value>
                <value>
                    <fullName>Bissa</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Global__c</fullName>
        <description>IQVIAPSA-7585 Site, IQVIAPSA-9102 Promote to Global Value Set</description>
        <label>Site</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Site</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Portal_Modules__c</fullName>
        <label>Site Portal Modules</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Site Activation</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Feasibility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_TMFs__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Source of TMFs</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Species_Global__c</fullName>
        <description>IQVIAPSA-7585 Species</description>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Species</valueSetName>
    </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Device_Strategy__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Specific Device Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specimen_Type__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;BioSciences&apos;)
            ,IF(OR(CONTAINS(TEXT(Biological_Matrix_Global__c),&apos;Plasma&apos;), CONTAINS(TEXT(Biological_Matrix_Global__c),&apos;Serum&apos;)
            ),&apos;Plasma/Serum&apos;
            ,&apos;Non-Plasma/Serum&apos;)
            , IF(OR(ISPICKVAL(Type__c,&apos;Protein Sciences&apos;),ISPICKVAL(Type__c,&apos;Vaccines&apos;)),&apos;N/A&apos;,&apos;&apos;))</formula>
        <label>Specimen Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsor_Launch_Site_Date__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Sponsor - Launch Site Date</label>
        <type>Date</type>
    </fields>
    <fields>
    <fullName>Strains__c</fullName>
    <label>Strains</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
            <value>
                <fullName>No Specific Strain</fullName>
            </value>
            <value>
                <fullName>VoC/VoI</fullName>
            </value>
            <value>
                <fullName>D614 (Wuhan)</fullName>
            </value>
            <value>
                <fullName>D614G</fullName>
            </value>
            <value>
                <fullName>Alpha</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Delta+</fullName>
            </value>
            <value>
                <fullName>Epsilon</fullName>
            </value>
            <value>
                <fullName>Gamma</fullName>
            </value>
            <value>
                <fullName>Iota-1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Lambda</fullName>
            </value>
            <value>
                <fullName>Mu</fullName>
            </value>
            <value>
                <fullName>Omicron BA.1</fullName>
            </value>
            <value>
                <fullName>Omicron BA.2</fullName>
            </value>
            <value>
                <fullName>Omicron BA.4/5</fullName>
            </value>
            <value>
                <fullName>XBB.1</fullName>
            </value>
            <value>
                <fullName>XBB.1.5</fullName>
            </value>
            <value>
                <fullName>XBB.1.16</fullName>
            </value>
            <value>
                <fullName>BQ.1</fullName>
            </value>
            <value>
                <fullName>EG.5</fullName>
            </value>
            <value>
                <fullName>BA.2.86</fullName>
            </value>
            <value>
                <fullName>JN.1</fullName>
            </value>
            <value>
                <fullName>KP.2</fullName>
            </value>
            <value>
                <fullName>KP.3</fullName>
            </value>
            <value>
                <fullName>RsSHCo14</fullName>
            </value>
            <value>
                <fullName>BtKY72</fullName>
            </value>
            <value>
                <fullName>Neo-CoV</fullName>
            </value>
            <value>
                <fullName>Gx Pangolin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    </fields>
    <fields>
        <fullName>Study_Number__c</fullName>
        <description>IQVIAPSA-7585  Study Number</description>
        <label>Study Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Study_Type_Global__c</fullName>
        <description>IQVIAPSA-7585 Study type, IQVIAPSA-9102 Promote to Global Value Set</description>
        <label>Study Type</label>
        <type>Picklist</type>
        <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Study_Type</valueSetName>
    </valueSet>
    </fields>
    <fields>
        <fullName>Supplies_System__c</fullName>
        <label>Supplies System</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Supply_Chain_Management__c</fullName>
        <label>Supply Chain Management</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>IQVIAPSA-8972</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>up to 5 PY</fullName>
                </value>
                <value>
                    <fullName>T1- Up to 10 PY</fullName>
                </value>
                <value>
                    <fullName>T2 -11-15 Studies PY</fullName>
                </value>
                <value>
                    <fullName>T3 -16-25 Studies PY</fullName>
                </value>
                <value>
                    <fullName>T4 -26 - 50 Studies PY</fullName>
                </value>
                <value>
                    <fullName>T5 -51-100 Studies PY</fullName>
                </value>
                <value>
                    <fullName>T6 - 101-199 studies PY</fullName>
                </value>
                <value>
                    <fullName>T7 - 200+ Studies PY</fullName>
                </value>
                <value>
                    <fullName>Sml CRO - up to 50 bids/Yr</fullName>
                </value>
                <value>
                    <fullName>Med CRO - 51 to 99 bids/yr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT-11:00) Samoa Standard Time (Pacific/Pago_Pago)</fullName>
                </value>
                <value>
                    <fullName>(GMT-11:00) Samoa Standard Time (Pacific/Midway)</fullName>
                </value>
                <value>
                    <fullName>(GMT-11:00) Niue Time (Pacific/Niue)</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Tahiti Time (Pacific/Tahiti)</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Hawaii-Aleutian Standard Time (Pacific/Johnston)</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Hawaii-Aleutian Standard Time (Pacific/Honolulu)</fullName>
                </value>
                <value>
                    <fullName>(GMT-10:00) Cook Islands Standard Time (Pacific/Rarotonga)</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:30) Marquesas Time (Pacific/Marquesas)</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Hawaii-Aleutian Daylight Time (America/Adak)</fullName>
                </value>
                <value>
                    <fullName>(GMT-09:00) Gambier Time (Pacific/Gambier)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Pitcairn Time (Pacific/Pitcairn)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Yakutat)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Sitka)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Nome)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Metlakatla)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Juneau)</fullName>
                </value>
                <value>
                    <fullName>(GMT-08:00) Alaska Daylight Time (America/Anchorage)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Yukon Time (America/Whitehorse)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Yukon Time (America/Dawson)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Pacific Daylight Time (America/Vancouver)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Pacific Daylight Time (America/Tijuana)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Pacific Daylight Time (America/Los_Angeles)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Northwest Mexico Daylight Time (America/Santa_Isabel)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time (America/Phoenix)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time (America/Fort_Nelson)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time (America/Dawson_Creek)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mountain Standard Time (America/Creston)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mexican Pacific Standard Time (America/Mazatlan)</fullName>
                </value>
                <value>
                    <fullName>(GMT-07:00) Mexican Pacific Standard Time (America/Hermosillo)</fullName>
                </value>
                <value>
                    <fullName>(GMT-06:00) Mountain Daylight Time (America/Yellowknife)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_of_Caregiver_s_per_Patient__c</fullName>
        <label>Total # of Caregiver(s) per Patient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_Pts_Receiving_Payment__c</fullName>
        <label>Total # of Pts Receiving Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>IQVIAPSA-7689</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ECOA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>BioSciences</fullName>
                </value>
                <value>
                    <fullName>Countries in Scope</fullName>
                </value>
                <value>
                    <fullName>New System Implementation</fullName>
                </value>
                <value>
                    <fullName>Existing System - Upgrade Or Additions/Changes</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>IRT</fullName>
                </value>
                <value>
                    <fullName>Grant Plan</fullName>
                </value>
                <value>
                    <fullName>Site Portal</fullName>
                </value>
                <value>
                    <fullName>eTMF</fullName>
                </value>
                <value>
                    <fullName>One Home</fullName>
                </value>
                <value>
                    <fullName>Participant Payments</fullName>
                </value>
                <value>
                    <fullName>Payment Forecasting</fullName>
                </value>
                <value>
                    <fullName>CTP</fullName>
                </value>
                <value>
                    <fullName>IVP Signal</fullName>
                </value>
                <value>
                    <fullName>IVP Collect</fullName>
                </value>
                <value>
                    <fullName>Consulting/Other Services/Products Required</fullName>
                </value>
                <value>
                    <fullName>Data Migration in Scope</fullName>
                </value>
                <value>
                    <fullName>Discovery</fullName>
                </value>
                <value>
                    <fullName>Protein Sciences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_DM_System__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Type of DM System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Global and Japan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Data_Migration__c</fullName>
        <description>IQVIAPSA-8885</description>
        <label>Type of Data Migration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E2B</fullName>
                </value>
                <value>
                    <fullName>DB to DB</fullName>
                </value>
                <value>
                    <fullName>Spreadsheets to DB</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>